# cfgs4etonWS

./: README.md
26-scripts4ai_ML/: README.md  print-aws-s3-tree.sh  showDataInS3_thyroid.sh  showModelsTrainedInS3.sh
26-scripts4ai_ML/data-process/: aggregrate_emptyScansV03.sh  clearImageDataInJson3.py  create_mini_dataset.py  matchFilesNotEndWith_json_png.sh  move-contentsInSubfolder2RunPath-v002.sh  removeChineseFromLabelName4Json.py  storeDataToS3_thyroid.sh  subs_labelName.py
26-scripts4ai_ML/data-process/mobileUS-dataset-create-addNodule2thyroidGland/: 210822_ThyGlandSeg_hhN33In8Cases.count.txt  220222_thyroidNodules-hh19.count.txt  copy--from-list.sh  count-png-files-v01.py  count-png-files-v02.py  extract_field_fromCSV.py  first-dcmfrm.list  match-folder-byCount.py  nodule-dcmfrm.list  pyproject.toml
26-scripts4ai_ML/data-process/mobileUS-dataset-create-addNodule2thyroidGland/2labels-merged-dir/: matched_pairs.csv
26-scripts4ai_ML/data-process/mobileUS-dataset-create-addNodule2thyroidGland/images_bin_matcher/: __init__.py  cli.py  matcher.py
26-scripts4ai_ML/data-process/mobileUS-dataset-create-addNodule2thyroidGland/tests/: test_matcher.py
26-scripts4ai_ML/guidance-files/: updateS3GuidanceInfo_forApp.sh  uploadNewGuidance2S3.sh
26-scripts4ai_ML/models-process/: copy_train-logs.sh  copy_trained_models_here.sh  generate-validation4ModelsPackage2S3.py  show_modesl4APP.sh  updateS3ModelsInfo_forApp.sh  uploadNewModelsPackage2S3.sh
configs/: etc-containerd-config.toml  etc-docker-daemon.json  etc-orthanc-dicomweb.json  etc-systemd-resolved.conf.d-10eton.conf
configs/git-configs/: general.sh
docs/: copy-top5-imageJsonPairs.md
learning/tech-demos/: CMakeLists.txt  README.md
learning/tech-demos/avx-demo/: CMakeLists.txt  README.md
learning/tech-demos/avx-demo/src/: avx2_intrinsics.cpp  dispatch.cpp  main_auto.cpp  main_dispatch.cpp  main_eigen.cpp  main_intrinsics.cpp  main_mv.cpp  multiversion.cpp  scalar.cpp
learning/tech-demos/cuda-demo/: .gitignore  CMakeLists.txt  README.md
learning/tech-demos/cuda-demo/src/: add.cu  kernels.h  main.cu  multiply.cu
learning/tech-demos/docs/: README.md  adding-a-subproject.md  cuda-setup-debian13.md
scripts-bash/: 03-color-msg.sh  NIFT2dcm.sh  addDatePrefixToPdfFiles.sh  aws_S3.add_s3_CORS_origin.sh  copy_top5_pairs.sh  dfgApp.sh  domain_policy_routing.sh  invoice_extractAmountY26V03.sh  routing_policy_dual_interfaces_xin1zp.sh  textEncoding2UTF8.sh
scripts-bash/04-brew/: update-brew-mirrors.sh
scripts-bash/43-interesting/: peace-for-all.sh
scripts-bash/ML-fileProcess/: moveImagesFromSubfoldersToHere.sh  moveImagesFromSubfoldersToHereWithPrefix.sh
scripts-bash/git-helpers/: entire_backup_repo_gitea_ruidong.sh  (+2 more)
scripts-py/: copy_each_folder_top5ToHere-flat.py  copy_each_folder_top5ToHere-preservedTheSubfolderStructure.py  cutBlackEdgeOffImage.py
(+19 files in other folders)
